--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,15 @@ before_install:
 
 script:
   - docker run -e CI=true thiagocf/docker-react-test npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "sa-east-1"
+  app: "docker-react"
+  env: "docker-react-env"
+  bucket_name: "elasticbeanstalk-sa-east-1-108401012963"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
