--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "sa-east-1"
-  app: "docker-react"
+  app: "docker-react-test"
   env: "docker-react-env"
   bucket_name: "elasticbeanstalk-sa-east-1-108401012963"
-  bucket_path: "docker-react"
+  bucket_path: "Dockerreacttest-env"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
